# prompt-optimization-lab

./: .env.example  .gitignore  COMPLIANCE_REPORT.md  COMPLIANCE_REPORT_FINAL.md  CONTRIBUTING.md  LICENSE  PRD.md  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/agents/: academic-compliance-auditor.md
config/: pipeline_config.yaml
data/: dataset_a.json  dataset_b.json
docs/architecture/: ARCHITECTURE.md
docs/architecture/diagrams/: c4-component.md  c4-container.md  c4-context.md
docs/guides/: CONFIGURATION.md  COST_ANALYSIS.md  USER_MANUAL.md
docs/prompts/: PROMPT_ENGINEERING_LOG.md
notebooks/: 01_data_exploration.ipynb  02_prompt_techniques_demo.ipynb  03_results_analysis.ipynb  README.md
results/: experiment_report.md  experiment_results.json  visualization_report.md
scripts/: analyze_results.py  generate_datasets.py  run_quick_experiment.py
src/: __init__.py
src/building_blocks/: __init__.py  implementations.py  interfaces.py
src/data/: __init__.py  dataset_creator.py  loaders.py  validators.py
src/evaluation/: __init__.py
src/llm/: __init__.py  client.py  utils.py
src/metrics/: __init__.py  accuracy.py  information_theory.py
src/pipeline/: __init__.py  evaluator.py  experiment_evaluator.py  orchestrator.py  orchestrator_data.py  orchestrator_evaluation.py  orchestrator_reporting.py  parallel.py  statistics.py  summary.py
src/prompts/: __init__.py  base.py  techniques.py
src/visualization/: __init__.py  plotters.py  report.py  visualization.py
tests/: test_building_blocks.py  test_cli.py  test_data.py  test_data_loaders.py  test_information_theory_extended.py  test_information_theory_final.py  test_init_modules.py  test_llm.py  test_llm_extended.py  test_llm_utils_complete.py  test_llm_utils_final.py  test_metrics.py  test_metrics_comprehensive.py  test_orchestrator.py  test_orchestrator_detailed.py  test_parallel.py  test_pipeline.py  test_pipeline_additional.py  test_pipeline_evaluators.py  test_prompts.py  test_report_generation.py  test_simple_coverage_boost.py  test_summary.py  test_visualization.py  test_visualization_generation.py
